# weatherapp

./: CMakeLists.txt  README.md
include/: DatabaseManager.h  WeatherAPI.h  WeatherData.h  WeatherUI.h
src/: DatabaseManager.cpp  WeatherAPI.cpp  WeatherData.cpp  WeatherUI.cpp  main.cpp
